--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Our js bundle will be in 'bundle.js' -->
-  <!-- The 'defer' attribute will ensure that it is run only after the DOM finishes loading -->
   <script src="bundle.js" defer></script>
 </head>
 <!-- Responsive design? Check. This tag will make mobile browsers scale to device width -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!-- Defines the character set -->
 <meta charset="UTF-8">
-<!-- MDN recommends placing this right after your <head> tag -->
-<!-- "as some browsers restart the parsing of an HTML document if the declared charset is different from what they had anticipated" -->
-<!-- https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5/Introduction_to_HTML5 -->
-
-<!-- Give your app a swell name -->
 <title>Gitbot</title>
 <body>
     <h1>Hi worrlllddd</h1>
   <!-- We will render our React app into a div with an id of 'app' -->
   <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
   <div id="app"></div>
+  <iframe
+    align="bottom"
+    width="350"
+    height="430"
+    src="https://console.api.ai/api-client/demo/embedded/b77433ff-768e-41ff-a8a7-24fe2a5219b8">
+  </iframe>
 </body>
 </html>
