feat: added react components for site layout

--- a/public/index.html
+++ b/public/index.html
@@ -10,23 +10,12 @@
 <meta charset="UTF-8">
 <title>Gitbot</title>
 <body>
-    <h1>Hi, I'm GitBot!</h1>
-    <h2> Chat with me here or add me to your Slack channel...</h2>
-      <p> ...I'm a lot more fun there!</p>
-      <p>...I'm a lot more fun there! Here are some things I can do:</p>
-      <ul>
-        <li>Answer general questions about Git & GitHub</li>
-        <li>Help you with Git and GitHub workflows</li>
-        <li>Chat with you...I get lonely</li>
-      </ul>
-  <!-- We will render our React app into a div with an id of 'app' -->
-  <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
   <div id="app"></div>
-  <iframe
+  <!--<iframe
     align="bottom"
     width="350"
     height="430"
     src="https://console.api.ai/api-client/demo/embedded/b77433ff-768e-41ff-a8a7-24fe2a5219b8">
-  </iframe>
+  </iframe>-->
 </body>
 </html>
