--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!--local CSS dependencies-->
-  <link rel="stylesheet" href="index.scss" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="bundle.js" defer></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
