--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <!--local CSS dependencies-->
+  <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.css' />
   <link rel="stylesheet" href="styles.css" />
   <script src="bundle.js" defer></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
@@ -16,4 +17,5 @@
 <body>
   <div id="app"></div>
 </body>
+<script src="/bootstrap/dist/jquery/jquery.js"></script>
 </html>
