--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css" />
   <script src="bundle.js" defer></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <!-- Responsive design? Check. This tag will make mobile browsers scale to device width -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 <title>Gitbot</title>
 
 <body>
-  <div id="app"></div>
+  <div id="app" class="container-fluid"></div>
 </body>
 <script src="/bootstrap/dist/jquery/jquery.js"></script>
 </html>
