feat(site): style updates and file cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,13 @@
 
 
   <div id="app" class="site-wrapper"></div>
-  <footer className="footer">
-    <div className="container">
-      <p> Add me to your Slack channel...I'm a lot more fun there!</p>
+      <p class="slack"> Add me to your Slack channel, where I can help you check on your latest commits, search repos, and more!</p>
       <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=198771643940.198649327571"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-      <p className="text-muted">Made by a <a href="https://github.com/aperez25/gitbot>"<span class="glyphicons glyphicons-user"></span></a> with <span className="glyphicon glyphicon-heart"></span></p>
+  <footer class="footer">
+    <div class="container">
+      <p></p>
+      <p><a id="mygithub"href="https://github.com/aperez25/gitbot">Click here to learn more about Gitbot</a><span class="glyphicon glyphicon-gear"></span></a></p>
+    </div>
   </footer>
 </body>
 <script src="jquery-3.2.1.min.js"></script>
