feat(site): style updates

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
 <title>Gitbot</title>
 
 <body>
-
+    <div class="masthead clearfix">
+    <div class="container inner">
+      <h3 class="masthead-brand"><a id="mygithub" href="https://github.com/aperez25/gitbot" target="_blank">GitBot</a></h3>
+    </div>
+  </div>
 
   <div id="app" class="site-wrapper"></div>
       <p class="slack"> Add me to your Slack channel, where I can help you check on your latest commits, search repos, and more!</p>
@@ -28,7 +32,7 @@
   <footer class="footer">
     <div class="container">
       <p></p>
-      <p><a id="mygithub"href="https://github.com/aperez25/gitbot">Click here to learn more about Gitbot</a><span class="glyphicon glyphicon-gear"></span></a></p>
+      <p><a id="mygithub" href="https://github.com/aperez25/gitbot" target="_blank">Click here to learn more about Gitbot</a><span class="glyphicons glyphicons-gear"></span></a></p>
     </div>
   </footer>
 </body>
